--- a/index.html
+++ b/index.html
@@ -10,7 +10,45 @@
 <header class="header"></header>
 <main class="main">
     <section class="about-us"></section>
-    <section class="industrial-ai"></section>
+    <section class="ai-research">
+      <h2 class="ai-research__title ai-research__title_type_page">INDUSTRIAL AI RESEARCH LAB</h2>
+      <img class="ai-research__image" src="./images/ai-research__image.jpg" alt="Два специалиста работают за компьютерами.">
+      <p class="ai-research__paragraph ai-research__paragraph_type_page">Центр национальной технологической инициативы (НТИ), получивший государственную поддержку 
+        по направлению «Технологии машинного обучения и когнитивные технологии».</p>
+      <p class="ai-research__paragraph ai-research__paragraph_type_page">Мы изучаем проблемы и выявляем, когда мы работаем вместе с нашими клиентами, новые решения
+        находят, не задумываясь. Работая таким образом и проявляя гибкость, мы можем поддерживать новый подход для удовлетворения
+        потребностей наших клиентов.</p>
+      <ul class="ai-research__cards">
+        <li class="ai-research__card">
+          <h3 class="ai-research__title ai-research__title_type_card">Анализ социальных данных</h3>
+          <div class="ai-research__icon"></div>
+          <p class="ai-research__paragraph ai-research__paragraph_type_card">Направление включает в себя исследования и разработки технологий
+            МО и КТ</p>
+          <button class="ai-research__button" type="button">Подробнее</button>
+        </li>
+        <li class="ai-research__card">
+          <h3 class="ai-research__title ai-research__title_type_card">Инфраструктура больших данных</h3>
+          <div class="ai-research__icon"></div>
+          <p class="ai-research__paragraph ai-research__paragraph_type_card">Направление включает в себя исследования и разработки технологий
+            МО и КТ</p>
+          <button class="ai-research__button" type="button">Подробнее</button>
+        </li>
+        <li class="ai-research__card">
+          <h3 class="ai-research__title ai-research__title_type_card">Облачные вычисления</h3>
+          <div class="ai-research__icon"></div>
+          <p class="ai-research__paragraph ai-research__paragraph_type_card">Направление включает в себя исследования и разработки технологий
+            МО и КТ</p>
+          <button class="ai-research__button" type="button">Подробнее</button>
+        </li>
+        <li class="ai-research__card">
+          <h3 class="ai-research__title ai-research__title_type_card">QA системы</h3>
+          <div class="ai-research__icon"></div>
+          <p class="ai-research__paragraph ai-research__paragraph_type_card">Направление включает в себя исследования и разработки технологий
+            МО и КТ</p>
+          <button class="ai-research__button" type="button">Подробнее</button>
+        </li>
+      </ul>
+    </section>
     <section class="our-projects"></section>
     <section class="education"></section>
     <section class="publications"></section>
