feat: change .gitignore

--- a/index.html
+++ b/index.html
@@ -4,19 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pages/index.css">
-  <title>itmo.ru</title>
+  <title>ИТМО: когнитивные технологии и машинное обучение</title>
 </head>
 <body class="root">
 <header class="header"></header>
 <main class="main">
-    <section class="about-us"></section>
-    <section class="industrial-ai"></section>
-    <section class="our-projects"></section>
-    <section class="education"></section>
-    <section class="publications"></section>
-    <section class="our-team"></section>
-    <section class="partners"></section>
-    <section class="communication"></section>
+  <section class="lead">
+    <div class="lead__wrapper">
+      <h1 class="lead__title"><span class="lead__span-accent">Когнитивные технологии,</span>
+      машинное обучение</h1>
+      <p class="lead__subtitle">Системы прикладного искусственного интеллекта</p>
+      <a href="#" class="lead__link">Наши проекты</a>
+    </div>
+  </section>
+  <section class="about-us"></section>
+  <section class="industrial-ai"></section>
+  <section class="our-projects"></section>
+  <section class="education"></section>
+  <section class="publications"></section>
+  <section class="our-team"></section>
+  <section class="partners"></section>
+  <section class="communication"></section>
 </main>
 <footer class="footer"></footer>
 </body>
