--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </li>
         <li class="about__card">
           <p class="about__card-date">Понедельник, 5 июля 2021г</p>
-          <p class="about__card-title">Авторы робота-музыканта Роберта Роботецкого признаны лучшими новичками</p>
+          <p class="about__card-title">Авторы робота-музыканта Роберта Роботецкого признаны лучшими новинками сезона</p>
           <p class="about__card-text">Команда ИТМО стала лучшей на международном финале RoboCup-2021. Успех ребятам
             принес Роберт Роботецкий — робот-виртуоз, исполнивший знаменитый французский романс «Под небом Парижа». В
             подготовке команды участвовали сотрудники лаборатории.</p>
@@ -43,14 +43,16 @@
           <p class="about__card-title">Возвращение на Петропавловку: как прошел выпускной ITMO. LIVE — 2021</p>
           <p class="about__card-text">Команда ИТМО сделала многое, чтобы вернуть формат выпускного этого и прошлого
             года. Из-за эпидемиологической ситуации отменена развлекательная часть, но сохранилась торжественная.
-            Выпускники смогли получить дипломы из рук деканов и услышать поздравления ректора.</p>
+            Выпускники смогли получить дипломы из рук деканов и услышать поздравления.</p>
         </li>
       </ul>
       <button class="about__button-arrow about__button-arrow_left"></button>
       <button class="about__button-arrow about__button-arrow_right"></button>
-      <ul class="slider__pagination-list">
-        <li class="slider__pagination-item slider__pagination-item_active"></li>
-        <li class="slider__pagination-item"></li>
+      <ul class="slider__radio-list">
+        <li>
+          <button type="button" class="slider__radio-item slider__radio-item_active"></button></li>
+        <li>
+          <button type="button" class="slider__radio-item"></button></li>
       </ul>
     </div>
   </section>
