--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
         <section class="about-us"></section>
         <section class="ai-research">
           <h2 class="ai-research__title ai-research__title_type_page">INDUSTRIAL AI RESEARCH LAB</h2>
-          <img class="ai-research__image" src="./images/ai-research__image.jpg" alt="Два специалиста работают за компьютерами.">
-          <p class="ai-research__paragraph ai-research__paragraph_type_page">Центр национальной технологической инициативы (НТИ), получивший государственную поддержку 
-            по направлению «Технологии машинного обучения и когнитивные технологии».</p>
-          <p class="ai-research__paragraph ai-research__paragraph_type_page">Мы изучаем проблемы и выявляем, когда мы работаем вместе с нашими клиентами, новые решения
-            находят, не задумываясь. Работая таким образом и проявляя гибкость, мы можем поддерживать новый подход для удовлетворения
-            потребностей наших клиентов.</p>
+          <div class="ai-research__wrapper">
+            <div class="ai-research__row-image">
+              <img class="ai-research__image ai-research__image_active" src="./images/ai-research__image_active.jpg" alt="Специалист работает за ноутбуком в наушниках.">
+              <img class="ai-research__image" src="./images/ai-research__image.jpg" alt="Два специалиста работают за компьютерами.">
+            </div>
+            <div class="ai-research__column-text">
+              <p class="ai-research__paragraph ai-research__paragraph_type_page">Центр национальной технологической инициативы (НТИ), получивший государственную поддержку 
+                по направлению «Технологии машинного обучения и когнитивные технологии».</p>
+              <p class="ai-research__paragraph ai-research__paragraph_type_page ai-research__paragraph_type_light">Мы изучаем проблемы и выявляем, когда мы работаем вместе с нашими клиентами, новые решения
+                находят, не задумываясь. Работая таким образом и проявляя гибкость, мы можем поддерживать новый подход для удовлетворения
+                потребностей наших клиентов.</p>
+              </div>
+            </div>
           <ul class="ai-research__cards">
-            <li class="ai-research__card">
+            <li class="ai-research__card ai-research__card_type_project">
               <h3 class="ai-research__title ai-research__title_type_card">Анализ социальных данных</h3>
               <div class="ai-research__logo">
                 <img class="ai-research__icon" src="./images/ai-research__icon_pen.svg" alt="Карандаш на фоне линейки.">
@@ -29,7 +36,7 @@
                 МО и КТ</p>
               <button class="ai-research__button" type="button">Подробнее</button>
             </li>
-            <li class="ai-research__card">
+            <li class="ai-research__card ai-research__card_type_machine-learning">
               <h3 class="ai-research__title ai-research__title_type_card">Инфраструктура больших данных</h3>
               <div class="ai-research__logo">
                 <img class="ai-research__icon" src="./images/ai-research__icon_brain.svg" alt="Извилины мозга.">
@@ -38,7 +45,7 @@
                 МО и КТ</p>
               <button class="ai-research__button" type="button">Подробнее</button>
             </li>
-            <li class="ai-research__card">
+            <li class="ai-research__card ai-research__card_type_data">
               <h3 class="ai-research__title ai-research__title_type_card">Облачные вычисления</h3>
               <div class="ai-research__logo">
                 <img class="ai-research__icon" src="./images/ai-research__icon_chip.svg" alt="Микросхема.">
@@ -47,7 +54,7 @@
                 МО и КТ</p>
               <button class="ai-research__button" type="button">Подробнее</button>
             </li>
-            <li class="ai-research__card">
+            <li class="ai-research__card ai-research__card_type_QA">
               <h3 class="ai-research__title ai-research__title_type_card">QA системы</h3>
               <div class="ai-research__logo">
                 <img class="ai-research__icon" src="./images/ai-research__icon_robot.svg" alt="Голова робота.">
