feat: added footer fpr 320px

--- a/index.html
+++ b/index.html
@@ -18,6 +18,41 @@
     <section class="partners"></section>
     <section class="communication"></section>
 </main>
-<footer class="footer"></footer>
+<footer class="footer">
+  <div class="footer__info">
+    <img class="footer__logo" src="./images/footer__logo.svg">
+    <p class="footer__copyright">Информация © 2020 Университет ИТМО</p>
+  </div>
+  <p class="footer__text footer__text_display-none">Национальный центр когнитивных разработок – центр национальной технологической инициативы (НТИ), получивший государственную поддержку 
+    по направлению «Технологии машинного обучения и когнитивные технологии». Инфраструктурная основа взаимодействия научных, образовательных 
+    и промышленных организаций</p>
+  <nav class="footer__links">
+    <ul class="footer__list">
+      <h4 class="footer__list-title">О центре</h4>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">О нас</a></li>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">Главная</a></li>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">Команда</a></li>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">Лаборатория</a></li>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">Контакты</a></li>
+    </ul>   
+    <ul class="footer__list">
+      <h4 class="footer__list-title">Развитие</h4>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">Образование</a></li>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">Аспирантура</a></li>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">Магистратура</a></li>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">Публикации</a></li>
+      <li class="footer__list-item"><a href="#" class="link footer__link" target="_blank" rel="noopener">Проекты</a></li>
+    </ul> 
+  </nav>
+  <div class="footer__contact-info">
+    <h4 class="footer__title-text">г.Санкт-Петербург</h4>
+    <p class="footer__text">199034, Санкт-Петербург, <br> Биржевая линия, д. 4, лит. М, ауд. 302С</p>
+    <p class="footer__text">+7 (812) 337-64-90 <br> +7 (812) 337-64-94</p>
+    <p class="footer__text">anna.lutsenko@itmo.ru</p>
+  </div>
+  <!-- Здесь будут иконки -->
+  <div class="footer__social"></div>
+  <p class="footer__authors">Сделано студентами Яндекс. Практикума</p>
+</footer>
 </body>
 </html>
