--- a/index.html
+++ b/index.html
@@ -70,7 +70,20 @@
         <section class="publications"></section>
         <section class="our-team"></section>
         <section class="partners"></section>
-        <section class="communication"></section>
+        <section class="communication">
+          <h2 class="communication__title">ВСЕГДА НА СВЯЗИ</h2>
+          <p class="communication__text">По всем интересующим вас вопросам вы всегда можете обратиться по указанным телефонам, написать на почту или оставтиь свое сообщение через форму обратной связи. </p>
+          <form class="communication__form">
+      
+              <input class="communication__input" placeholder="Имя" type="text" required minlength="2">
+              <input class="communication__input" placeholder="Фамилия" type="text" minlength="2">
+              <input class="communication__input" placeholder="Телефон" type="tel">
+              <input class="communication__input" placeholder="E-mail" type="email" required minlength="2">
+
+            <textarea class="communication__input communication__input_type_message" placeholder="Сообщение" required minlength="2"></textarea> 
+            <button class="communication__button" type="submit">ОТПРАВИТЬ</button>
+          </form>
+        </section>
     </main>
     <footer class="footer"></footer>
   </div>
