added new styles for desktop and ipad

--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
           <h2 class="communication__title">ВСЕГДА НА СВЯЗИ</h2>
           <p class="communication__text">По всем интересующим вас вопросам вы всегда можете обратиться по указанным телефонам, написать на почту или оставтиь свое сообщение через форму обратной связи. </p>
           <form class="communication__form">
+            <div class ="communication__inputs">
               <input class="communication__input" placeholder="Имя" type="text" required minlength="2">
               <input class="communication__input" placeholder="Фамилия" type="text" minlength="2">
               <input class="communication__input" placeholder="Телефон" type="tel">
               <input class="communication__input" placeholder="E-mail" type="email" required minlength="2">
+            </div>
             <textarea class="communication__input communication__input_type_message" placeholder="Сообщение" required minlength="2"></textarea> 
             <button class="communication__button" type="submit">ОТПРАВИТЬ</button>
           </form>
