fix(swiper): fix carousel :)

--- a/index.html
+++ b/index.html
@@ -135,8 +135,6 @@
                 <!-- Additional required wrapper -->
                 <div class="navigation-container__wrapper swiper-wrapper">
                   <!-- Slides -->
-                  <div class="navigation-container__slide swiper-slide">
-                  </div>
                 </div>
               </div>
               <div class="pagination">
@@ -147,7 +145,7 @@
                 <!-- If we need navigation buttons -->
                 <div class="swiper-button-next"></div>
                 <!-- If we need scrollbar -->
-                <div class="swiper-scrollbar"></div> 
+                <!-- <div class="swiper-scrollbar"></div>  -->
               </div>
               
       </section>
